Adição a seção projeto

--- a/index.html
+++ b/index.html
@@ -140,5 +140,21 @@
             </form>
         </fieldset>
     </div>
+    <div class="container2">
+        <img src="Assets_Netuno/dev.png">
+        <div class="oprojeto">
+            <h2>O Projeto</h2>
+            <p>
+                Com o "novo normal" causado pela pandemia dos últimos anos, mais empresas no mundo têm aberto oportunidades no modelo Home Office.
+                <br/>
+                Alinhado a depreciação da moeda local, temos um alto índice de profissionais migrando para trabalhos em outros países.
+            </p>
+            <p>
+                <span>
+                    O projeto Netuno idealizado pela fasters, tem por objetivo reduzir os estresses causados por recrutamento e turn over na área de tecnologia, bem como gerar oportunidades de carreira para novos profissionais.
+                </span>
+            </p>
+        </div>
+    </div>
 </body>
 </html>
