--- a/index.html
+++ b/index.html
@@ -156,5 +156,97 @@
             </p>
         </div>
     </div>
+    <div class="container3">
+        <section>
+        <img src="Assets_Netuno/Container2.png">
+        <div class="textoProblemas">
+        <h2>O Problema</h2>
+        <h3>Falta de profissionais de TI no Mercado brasileiro: um problema que demanda atenção urgente.</h3>
+        <p>
+            Estima-se que atualmente tenhamos um déficit de 408 mil postos de trabalho, com perdas se acumulando na casa dos R$167 bilhões, de acordo com a Softex, uma organização social voltada ao fomento da área de TI.</p>
+        </p>
+        <h4>Um dos principais fatores dessa falta de profissionais é o êxodo de profissionais para o exterior.</h4>
+        </p>
+        </div>
+        </section>
+        <div class="cards">
+            <div class="card1">
+                <h2>Oportunidade</h2>
+                <p>Acreditamos que a combinação de interesse, dedicação e oportunidade pode causar um grande impacto nas pessoas, nas organizações e no mundo.</p>
+            </div>
+            <div class="card2">
+                <h2>Comunidade</h2>
+                <p>Dentro de um grupo de pessoas mais experientes e acessíveis, a curva de aprendizado ocorre de forma mais rápida, fluída e eficiente.</p>
+            </div>
+            <div class="card3">
+                <h2>Experiência Real</h2>
+                <p>Entendemos que somente as experiências poderão trazer a bagagem que a teoria não pode fazer.</p>
+            </div>
+        </div>
+    </div>
+    <div class="Containerjornada">
+        <div class="titulojornada">
+            <img src="Assets_Netuno/Elements/Vector3.png">
+            <h2>Sua Jornada</h2>
+            <img src="Assets_Netuno/Elements/Vector2.png">
+        </div>
+        <div class="jornada">
+            <div class="jornadainfos">
+                <div class="fundoicones">
+                    <img src="Assets_Netuno/icones/calendario.png">
+                </div>
+                <p>Programas de 4 meses de duração sendo 6 horas/dia.</p>
+            </div>    
+            <div class="jornadainfos">
+                <div class="fundoicones">
+                    <img src="Assets_Netuno/icones/medalha.png">
+                </div>
+                <p>Do Zero ao Júnior promissor em 4 meses.</p>
+            </div>  
+            <div class="jornadainfos">
+                <div class="fundoicones">
+                    <img src="Assets_Netuno/icones/relogio.png">
+                </div>
+                <p>60 horas de prática e aplicação de conceitos.</p>
+            </div>  
+            <div class="jornadainfos">
+                <div class="fundoicones">
+                    <img src="Assets_Netuno/icones/home.png">
+                </div>
+                <p>Mentoria individual e coletiva em padrão ágil.</p>
+            </div>  
+            <div class="jornadainfos">
+                <div class="fundoicones">
+                    <img src="Assets_Netuno/icones/group.png">
+                </div>
+                <p>100% Home Office com plataformas de cursos online.</p>
+            </div>  
+            <div class="jornadainfos">
+                <div class="fundoicones">
+                    <img src="Assets_Netuno/icones/target.png">
+                </div>
+                <p>Variedade de áreas dentro da tecnologia.</p>
+            </div>  
+        </div>
+    </div>
+    <div class="cadastroProcesso">
+        <button>
+            <h2>Quero me cadastrar para o <span>Processo seletivo</span></h2>
+            <img src="Assets_Netuno/icones/enter.png">
+        </button>
+        <img src="Assets_Netuno/Elements/Vector1.png">
+    </div>
+    <div class="ContainerObjetivos">
+        <h2>Objetivos</h2>
+        <div class="Objetivos">
+
+        </div>
+        <div class="Objetivos">
+            
+        </div>
+        <div class="Objetivos">
+            
+        </div>
+    </div>
 </body>
 </html>
