--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
 </head>
 <body>
     <header>
+        <a name="topo"></a>
         <img src="Assets_Netuno/assets/logo.png">
         <ul>
-            <li>O Projeto</li>
-            <li>O Problema</li>
-            <li>Sua Jornada</li>
-            <li>Objetivos</li>
+            <a href="#projeto"><li>O Projeto</li></a>
+            <a href="#problema"><li>O Problema</li></a>
+            <a href="#jornada"><li>Sua Jornada</li></a>
+            <a href="#objetivos"><li>Objetivos</li></a>
         </ul>
-        <h3>Processo Seletivo</h3>
+        <a href="#cadastro"><h3>Processo Seletivo</h3></a>
     </header>
     <div class="container1">
         <img src="Assets_Netuno/bannertopo.png">
         <fieldset>
             <form>
+                <a name="cadastro"></a>
                 <h1>Formulário de Cadastro</h1>
                 <h2>Preencha seus dados</h2>
                 <div class="dados">
@@ -140,6 +142,7 @@
             </form>
         </fieldset>
     </div>
+    <a name="projeto"></a>
     <div class="container2">
         <img src="Assets_Netuno/dev.png">
         <div class="oprojeto">
@@ -157,6 +160,7 @@
         </div>
     </div>
     <div class="container3">
+        <a name="problema"></a>
         <section>
         <img src="Assets_Netuno/Container2.png">
         <div class="textoProblemas">
@@ -184,6 +188,7 @@
             </div>
         </div>
     </div>
+    <a name="jornada"></a>
     <div class="Containerjornada">
         <div class="titulojornada">
             <img src="Assets_Netuno/Elements/Vector3.png">
@@ -230,23 +235,63 @@
         </div>
     </div>
     <div class="cadastroProcesso">
+        <a href="#cadastro">
         <button>
             <h2>Quero me cadastrar para o <span>Processo seletivo</span></h2>
             <img src="Assets_Netuno/icones/enter.png">
         </button>
+        </a>
         <img src="Assets_Netuno/Elements/Vector1.png">
     </div>
+    <a name="objetivos"></a>
     <div class="ContainerObjetivos">
         <h2>Objetivos</h2>
-        <div class="Objetivos">
+        <div class="cardsobjetivos">
+            <div class="Objetivos">
+                <h3>Otimizar</h3>
+                <p>Otimizar todo processo de contratação chegando a contribuir com uma economia de até 40% no processo de recrutamento.</p>
 
-        </div>
-        <div class="Objetivos">
+            </div>
+            <div class="Objetivos">
+                <h3>Gerar</h3>
+                <p>Gerar novas oportunidades de carreira para pessoas interessadas em ingressar na área ou migrar de outras áreas que esteja descontente.</p>
             
-        </div>
-        <div class="Objetivos">
+            </div>
+            <div class="Objetivos">
+                <h3>Filtrar</h3>
+                <p>Criar oportunidades brilhantes para profissionais que se destacarem junto a parceiros estratégicos de negócio.</p>
             
+            </div>
         </div>
     </div>
+    <footer>
+        <div class="colunabranding">
+            <img src="Assets_Netuno/assets/logo+slogan.png">
+            <div class="redessociais">
+                <img src="Assets_Netuno/icones/fb.png">
+                <img src="Assets_Netuno/icones/ig.png">
+                <img src="Assets_Netuno/icones/in.png">
+            </div>
+            <p>Netuno© 2023 - Todos os direitos reservados</p>
+        </div>
+        <a href="#cadastro">
+        <button>
+            <h2>Processo Seletivo</h2>
+        </button>
+        </a>
+        <ul>
+            <a href="#projeto"><li>O Projeto</li></a>
+            <a href="#problema"><li>O Problema</li></a>
+            <a href="#jornada"><li>Sua Jornada</li></a>
+            <a href="#objetivos"><li>Objetivos</li></a>
+        </ul>
+        <div class="contato">
+            <ul>
+                <li>Contato</li>
+                <li>11 91234.5678</li>
+                <li>contato@netuno.com.br</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
